WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116627
[BlackBerry] The web context does not contain any link properties if the context node is an image enclosed by a link node
https://bugs.webkit.org/show_bug.cgi?id=116627
Summary
[BlackBerry] The web context does not contain any link properties if the cont...
edbaker
Reported
2013-05-22 12:18:42 PDT
The web context should contain link and image properties if the context node is an image enclosed by a link node
Attachments
Patch
(2.07 KB, patch)
2013-05-22 12:35 PDT
,
edbaker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
edbaker
Comment 1
2013-05-22 12:35:23 PDT
Created
attachment 202613
[details]
Patch
Xan Lopez
Comment 2
2013-05-23 08:18:34 PDT
Comment on
attachment 202613
[details]
Patch Yep.
WebKit Commit Bot
Comment 3
2013-05-23 08:40:54 PDT
Comment on
attachment 202613
[details]
Patch Rejecting
attachment 202613
[details]
from commit-queue.
edbaker@rim.com
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Commit Bot
Comment 4
2013-05-23 09:11:03 PDT
Comment on
attachment 202613
[details]
Patch Clearing flags on attachment: 202613 Committed
r150588
: <
http://trac.webkit.org/changeset/150588
>
WebKit Commit Bot
Comment 5
2013-05-23 09:11:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug