[BlackBerry] The web context does not contain any link properties if the context node is an image enclosed by a link node https://bugs.webkit.org/show_bug.cgi?id=116627

Patch by Ed Baker <edbaker@blackberry.com> on 2013-05-23
Reviewed by Xan Lopez.

PR #341084

If the context node has an image tag and an enclosing link node was detected then add the link properties to the context.

Internally Reviewed by Gen Mak.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::webContext):

Canonical link: https://commits.webkit.org/134974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150588 268f45cc-cd09-0410-ab3c-d52691b4dbfc